# CryptoCoin

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
source/controller/: app.py  login.py  menu.py  miner.py  user.py
source/model/: blockchain.py  database_manager.py  main.py
source/view/: main.py
tests/: database_manager.py  login.py  test-mysql.py  test.sql
tests/test_model/: test_blockchain.py  test_database_manager.py
