[metadata]
name = cryptocoin

description = This is a application intended for me to learn how a cryptocurrency works under the hood

author = Gustavo Prado

license = MIT

license_file = LICENSE

platforms = win32, unix, linux, osx, cygwin

classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.8

[options]
packages = 
  view

install_requires =
  pycryptodome>=3.10.1
  mysql-connector-python-rf>=2.2.2

python_requires = >= 3.8

package_dir = 
  =source

[options.extras_require]

testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    tox>=3.24

[options.package_data]

view = py.typed


